--- a/app/src/main/res/layout/fragment_light.xml
+++ b/app/src/main/res/layout/fragment_light.xml
@@ -8,6 +8,7 @@
     android:gravity="center"
     android:orientation="horizontal"
     tools:context=".ui.light.LightFragment">
+
     <WebView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,9 +18,9 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:id="@+id/noti_list" />
-
+    <!--
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,5 +48,5 @@
 
 
     </ScrollView>
-
+    -->
 </LinearLayout>
