--- a/app/src/main/res/layout/fragment_light.xml
+++ b/app/src/main/res/layout/fragment_light.xml
@@ -5,20 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="top"
     android:orientation="vertical"
-    android:weightSum="1"
+    android:weightSum="5"
     tools:context=".ui.light.LightFragment">
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/webView"
-        android:layout_weight="0.8" />
+        android:layout_weight="2" />
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.2"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:id="@+id/noti_list" />
 </LinearLayout>
