--- a/app/src/main/res/layout/fragment_curtain.xml
+++ b/app/src/main/res/layout/fragment_curtain.xml
@@ -7,6 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.curtain.CurtainFragment">
+    <!--
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NOT PUSH" />
+    -->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
