--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,7 +84,13 @@
                 android:text="@string/loading" />
 
         </LinearLayout>
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/refresh"
+            android:layout_marginLeft="290dp"
+            android:backgroundTint="@color/cardview_dark_background"
+            android:text="Refresh"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
